examples/test/testpolicy8381.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8381
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key47: value9
      key1: value31
      key3: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value49
      podSelector:
        matchLabels:
          key15: value7
